--- a/index.html
+++ b/index.html
@@ -4,26 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de Recomendaciones</title>
+    <!-- Enlace al archivo de estilos CSS -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <h1>Sistema de Recomendaciones</h1>
+        <!-- Etiqueta y campo de entrada para el nombre del cliente -->
         <label for="cliente">Ingresa el nombre del cliente:</label>
         <input type="text" id="cliente" placeholder="Nombre del cliente">
+        <!-- Botón para mostrar las recomendaciones -->
         <button id="mostrarRecomendaciones">Mostrar Recomendaciones</button>
 
+        <!-- Sección para mostrar los artículos comprados -->
         <div id="articulosComprados">
             <h2>Artículos Comprados:</h2>
             <ul id="productosComprados"></ul>
         </div>
 
+        <!-- Sección para mostrar las recomendaciones -->
         <div id="recomendaciones">
             <h2>Recomendaciones:</h2>
             <ul id="listaRecomendaciones"></ul>
         </div>
     </div>
 
+    <!-- Enlace al archivo de JavaScript -->
     <script src="script.js"></script>
 </body>
 </html>
